
-----------------------------------------------------------------------

29/12/2020 (3):

- Function **clearscreen** pada **utils.c**
Sepertinya macro `WIN32` tidak terdefinisi pada standard C yang lama, jadi biar tidak bermasalah diubah menjadi `_WIN32`.
Di BINUS banyak yang menggunakan DevC++ versi 5.11, dan versi ini menggunakan standard C89 (ini standard lama, sekarang sudah C17, dan yg sebelumnya ada C99 dan C11).

- Tambahan macro **WEEK_IN_SECONDS** pada **common.h**
Macro ini menandakan nilai detik untuk seminggu.
Macro ini diperlukan agar mempermudah pembacaan code yang berhubungan dengan maksimum lama peminjaman buku.

-----------------------------------------------------------------------

29/12/2020 (4):

- Struct **book_t**
Perubahan atribut `btime` menjadi `duetime` begitu pula tujuan atribut ini.
Sekarang atribut ini bernilai kapan buku ini seharusnya dikembalikan ke perpustakaan, sebelumnya yaitu `btime` bernilai kapan buku itu dipinjam.

- Function **createbook**
Akibat perubahan pada struct `book_t`, function ini juga terkena efeknya.

- Function **isbook_borrowed**
Untuk berjaga-jaga ditambah lagi satu kondisi untuk menyatakan bahwa buku tersebut sedang dipinjam seseorang atau tidaknya.

-----------------------------------------------------------------------

30/12/2020 (1):

- Function **makeline** di **utils**
Berguna untuk membuat sebuah garis (bukan yg pake tanda minus (-) tapi pake ASCII)

- Function **getpass** di **utils**
Berguna untuk mendapatkan password dari console, kan biasanya kalo input password itu tak terlihat, nah ini functionnya biar bisa begitu

- Struct **bookpack_t** di **common.h**
Tambahan atribut `unsigned maxpage` untuk mengetahui total halaman untuk pagination

- Macro di di **common.h**
Terdapat tambahan macro berupa `DAY_IN_SECONDS` dan `LATE_FINE`, juga tipedatanya diubah secara paksa menjadi long

- **Include** di **common.h**
Sekarang sudah dibersihkan dan hanya menggunakan apa saja yang bakal digunakan.