@@ -1,10 +1,0 @@
-#ifndef ADMIN_MENU_C
-#define ADMIN_MENU_C
-
-// #include "../common.c"
-
-void showadmin_menu() {
-    
-}
-
-#endif // ! ADMIN_MENU_C
